# amazon-products-sentiment-analysis

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
dataset/: dataset.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  project_details_doc.ipynb  usage.rst
src/notebooks/: amazon-sentiment-analysis-bert.ipynb  amazon-sentiment-analysis-distilbert.ipynb  base_statistical_ML_modeling.ipynb  exploratory_data_analysis.ipynb  sample_data_generation.ipynb
src/sentiment_amazon_review/: __init__.py  cli.py
tests/: __init__.py  test_sentiment_amazon_review.py
