[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment_amazon_review"
version = "0.1.0"
description = "The goal of this project is to build a sentiment analysis model that can classify Amazon product reviews as positive, negative or notr based on the review text"
readme = "README.rst"
authors = [
  {name = "TubaCK", email = "cakirtuba@yahoo.com"}
]
maintainers = [
  {name = "TubaCK", email = "cakirtuba@yahoo.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/tuback/sentiment_amazon_review/issues"
changelog = "https://github.com/tuback/sentiment_amazon_review/blob/master/changelog.md"
homepage = "https://github.com/tuback/sentiment_amazon_review"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

